--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://avatar.iran.liara.run/public/42" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://avatar.iran.liara.run/public/42"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kade Virgil</title>
     <!-- Google Fonts -->
@@ -12,6 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <!-- Devicon Icons-->
+    <link rel="stylesheet" href="devicon.min.css" />
   </head>
   <body>
     <div id="root"></div>
